modified designs and logics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1322d173d9.js" crossorigin="anonymous"></script>
     <script src="js/script.js" type="text/javascript" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
@@ -17,8 +18,14 @@
         <h1>Dress well.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit asperiores ut quidem! Aperiam ad eius ex,
             sint accusantium eveniet odit laborum, molestias iste doloribus ipsa tenetur autem, a perferendis ipsam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit asperiores ut quidem! Aperiam ad eius ex,
+            sint accusantium eveniet odit laborum.
         </p>
-        <button id="shop-now">Shop Now</button>
+        <div class="shop-now">
+            <a href="shop.html">
+                <span>SHOP NOW</span>
+            </a>
+        </div>
     </section>
 
     <section id="featured">
@@ -32,7 +39,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$500</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product2.jpg" alt="feature cloth">
@@ -41,7 +48,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$600</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product3.jpg" alt="feature cloth">
@@ -50,7 +57,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$700</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product4.jpg" alt="feature cloth">
@@ -59,7 +66,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$800</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product5.jpg" alt="feature cloth">
@@ -68,7 +75,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$900</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product6.jpg" alt="feature cloth">
@@ -77,7 +84,7 @@
                     <h5>Pale Pink jacket</h5>
                     <h4>$1000</h4>
                 </div>
-                <a href="#" class=""><i class="fa-solid fa-cart-plus cart"></i></a>
+                <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
         </div>
     </section>
