--- a/user.html
+++ b/user.html
@@ -7,12 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1322d173d9.js" crossorigin="anonymous"></script>
     <script src="js/script.js" type="text/javascript" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Nanum+Gothic&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
 
 <body>
     <header id="temp-header"></header>
+
+    <section id="user-info">
+        <label for="name" id="name-label">
+            NAME
+            <!-- <input type="text" id="name" class="form-control" value="JOHN TAYLER" /> -->
+            <div class="user-details">JOHN TAYLER</div>
+        </label>
+        <label for="email" id="email-label">
+            EMAIL
+            <!-- <input id="email" type="text" value="abcde-001@gmail.com" /> -->
+            <div class="user-details">abcde-001@gmail.com</div>
+        </label>
+        <label for="number" id="number-label">
+            PHONE NUMBER
+            <!-- <input id="number" type="text" value="778-0001-0001" /> -->
+            <div class="user-details">778-0001-0001</div>
+        </label>
+        <label for="address" id="address-label">
+            ADDRESS
+            <!-- <input id="address" type="text" value="AKITO TOBITA" /> -->
+            <div class="user-details">AKITO TOBITA</div>
+        </label>
+    </section>
+
     <footer id="temp-footer"></footer>
 </body>
 
