--- a/index.html
+++ b/index.html
@@ -35,54 +35,54 @@
             <div class="product">
                 <img src="image/products/product1.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$500</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>500</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product2.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$600</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>600</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product3.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$700</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>700</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product4.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$800</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>800</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product5.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$900</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>900</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
             <div class="product">
                 <img src="image/products/product6.jpg" alt="feature cloth">
                 <div class="description">
-                    <span>canadian brand</span>
-                    <h5>Pale Pink jacket</h5>
-                    <h4>$1000</h4>
+                    <h5>canadian brand</h5>
+                    <h3>Pale Pink jacket</h3>
+                    <h4><span>$</span>1000</h4>
                 </div>
                 <a href="#" class=""><i class="fa-solid fa-heart heart"></i></a>
             </div>
