--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
     <script src="js/script.js" type="text/javascript" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Product</title>
 </head>
 
 <body onload="itemDetail();">
