--- a/user.html
+++ b/user.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Nanum+Gothic&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>User</title>
 </head>
 
 <body>
