--- a/user.html
+++ b/user.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1322d173d9.js" crossorigin="anonymous"></script>
-    <script src="js/script.js" type="text/javascript" defer></script>
+    <script src="js/components/common.js" type="text/javascript" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@600&family=Nanum+Gothic&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
