added a remove function in a remove icon

--- a/user.html
+++ b/user.html
@@ -37,6 +37,16 @@
             <!-- <input id="address" type="text" value="AKITO TOBITA" /> -->
             <div class="user-details">AKITO TOBITA</div>
         </label>
+        <table>
+            <thead>
+                <tr>
+                    <th>REMOVE</th>
+                    <th>PRODUCT</th>
+                    <th>IMAGE</th>
+                    <th>PRICE</th>
+                </tr>
+            </thead>
+        </table>
     </section>
 
     <footer id="temp-footer"></footer>
